syntax = "proto3";

package salon;
option go_package = "./proto;salon";

service SalonService {
  rpc AddSalon(AddSalonRequest) returns (SalonResponse);
  rpc AddProcedure(AddProcedureRequest) returns (ProcedureResponse);
  rpc AddSpecialist(AddSpecialistRequest) returns (SpecialistResponse);

  rpc GetAllSpecialists(Empty) returns (SpecialistListResponse);
  rpc GetAllProcedures(Empty) returns (ProcedureListResponse);
  rpc AssignProcedureToSpecialist(AssignProcedureRequest) returns (AssignResponse);
}

message Empty {}

message AddSalonRequest {
  string name = 1;
  string location = 2;
}

message AddProcedureRequest {
  string salon_id = 1;
  string name = 2;
  int32 duration = 3;
}

message AddSpecialistRequest {
  string salon_id = 1;
  string name = 2;
}

message AssignProcedureRequest {
  string specialist_id = 1;
  string procedure_id = 2;
}

message AssignResponse {
  bool success = 1;
}


message SalonResponse {
  string id = 1;
  string name = 2;
  string location = 3;
}

message ProcedureResponse {
  string id = 1;
  string salon_id = 2;
  string name = 3;
  int32 duration = 4;
}

message SpecialistResponse {
  string id = 1;
  string salon_id = 2;
  string name = 3;
}

message SpecialistListResponse {
  repeated SpecialistResponse specialists = 1;
}

message ProcedureListResponse {
  repeated ProcedureResponse procedures = 1;
}
